--- a/RadiationFiltering/RadiationFiltering/RadiationFiltering.vcxproj
+++ b/RadiationFiltering/RadiationFiltering/RadiationFiltering.vcxproj
@@ -91,7 +91,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\sample.bin" />
+    <None Include="sample.bin" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
