--- a/RadiationFiltering/RadiationFiltering/RadiationFiltering.vcxproj.filters
+++ b/RadiationFiltering/RadiationFiltering/RadiationFiltering.vcxproj.filters
@@ -34,7 +34,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\sample.bin">
+    <None Include="sample.bin">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
